openjdk23/jdk/test/langtools/tools/javac/annotations/neg/WrongTarget2.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

import java.lang.annotation.Inherited;
class Field {{
     @Inherited int vec;
}}
